--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(untitled2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(untitled2 main.cpp)
+add_executable(untitled2 "Priority-queue-red–black-tree.cpp"
+        Priority_queue_binary_heap.cpp
+        Priority_queue_sorting_list.cpp)
