--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(untitled2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(untitled2 "Priority-queue-red–black-tree.cpp"
-        Priority_queue_binary_heap.cpp
-        Priority_queue_sorting_list.cpp)
+add_executable(untitled2 "RedBlackTree.cpp"
+        BinaryHeap.cpp
+        SortingList.cpp
+        main.cpp)
